Mention pros and cons of -Xverify:none.